# WebCoffeShop

./: CMakeLists.txt  Makefile  README.md  contato.html  docker_run.sh  dockerfile  gamer  gamer.cpp  index.html  s3-upload.cpp  submission.html
Makefile-Antigo/: Makefile
css/: cafeteria.css
docs/: ECS_Deploy.md
include/awsdoc/s3/: S3_EXPORTS.h  s3-demo.h  s3_examples.h  s3_list_objects_with_aws_global_region.h
static/: index.html
templates/: submission.html
